# life_three.rs

./: .env  Cargo.toml  Leptos.toml  NOTION_SCHEMA_SETUP.md  tailwind.config.mjs
.claude/: settings.local.json
assets/: app.css  glass.css
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/handlers/: mod.rs  schema.rs
crates/backend/src/services/: mod.rs  notion_schema.rs
crates/backend/tests/: notion_integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  graph.rs  lib.rs  sanitize.rs  types.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
examples/: validate_notion_schema.rs
plan/: ALGORITHMS.md  ANALYSIS.md  ARCHITECTURE.md  DATA_MODELS.md  PORTING_PLAN.md  README.md  SOURCE_REFERENCE.md
