[workspace]
members = ["crates/core", "crates/backend", "crates/frontend"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
leptos = { version = "0.7" }
leptos_router = "0.7"
leptos_meta = "0.7"
